--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,34 @@
     }
 }
 
+
+@keyframes fadeInOut {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+@keyframes move-clouds-back {
+    from {background-position: 0 0;}
+    to {background-position: -10000px 0;}
+}
+
+@keyframes move-stars-back {
+    from {background-position: 0 0;}
+    to {background-position: -10000px 5000px;}
+}
+
 body{
     background-image: var(--gradient);
     animation: bg-animation 5s infinite alternate;
     background-size: 400%;
+    font-family: 'Cormorant Garamond', serif;
 }
 
 .stars{
@@ -28,10 +52,45 @@ body{
     position: fixed;
 }
 
-/*.star:hover{*/
-/*    height: 7px;*/
-/*    width: 7px;*/
-/*    border-radius: 50%;*/
-/*    opacity: 1;*/
-/*}*/
+.clouds{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: transparent url("img/clouds.png") repeat top center;
+    animation: move-clouds-back 250s linear infinite;
+    opacity: .4;
+}
+
+
+
+#helloThere, #part2{
+    opacity: 0;
+    color: white;
+    font-size: 70px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    animation: fadeInOut 10s;
+}
+
+#part2{
+    opacity: 0;
+    animation-delay: 10s;
+}
+
+.star{
+    border-radius: 50%;
+    width: 7px;
+    height: 7px;
+    background-color: white;
+    position: fixed;
+    animation: fadeInOut 1s infinite;
+}
+
 
