--- a/src/style.css
+++ b/src/style.css
@@ -30,12 +30,23 @@
 
 @keyframes move-clouds-back {
     from {background-position: 0 0;}
-    to {background-position: -10000px 0;}
+    to {background-position: -10000px 5000px;}
 }
 
-@keyframes move-stars-back {
-    from {background-position: 0 0;}
-    to {background-position: -10000px 5000px;}
+
+@keyframes pulse {
+    0%{
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+    }
+    70%{
+        transform: scale(1);
+        box-shadow: 0 0 0 15px rgba(255, 255, 255, 0.4);
+    }
+    100%{
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+    }
 }
 
 body{
@@ -43,6 +54,7 @@ body{
     animation: bg-animation 5s infinite alternate;
     background-size: 400%;
     font-family: 'Cormorant Garamond', serif;
+    overflow: hidden;
 }
 
 .stars{
@@ -84,13 +96,24 @@ body{
     animation-delay: 10s;
 }
 
-.star{
+#about{
     border-radius: 50%;
-    width: 7px;
-    height: 7px;
-    background-color: white;
-    position: fixed;
-    animation: fadeInOut 1s infinite;
+    width: 15px;
+    height: 15px;
+    margin: auto;
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+    transform: scale(1);
+    background: white;
+    animation: pulse 2s infinite;
+    margin-top: 20%;
+}
+
+#about:hover + #enter{
+
+}
+
+#enter{
+    display: none;
 }
 
 
